test/error/ast/ExprInRightNotSet.mod
MODULE ExprInRightNotSet;
VAR b: BOOLEAN;
BEGIN
  b := 1 IN 1;
END ExprInRightNotSet.
